--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-midnight
 
-plugins:
-  - jekyll-feed
-title: jmath
-description: Answering to mathematical questions using J.
-author: Michail Liarmakopoulos
+# plugins:
+#   - jekyll-feed
+# title: jmath
+# description: Answering to mathematical questions using J.
+# author: Michail Liarmakopoulos
